--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
            </div>
            <div>
             <ul>
-                <li><a class="active" href="sifat.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About</a></li>
               </ul>
            </div>
