--- a/aboutme.html
+++ b/aboutme.html
@@ -62,7 +62,7 @@
            </div>
            <div>
             <ul>
-                <li><a class="active" href="sifat.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
            </div>
